fixed FF alignment of cards

--- a/frontend/src/app/pointing/room-cards/room-cards.component.scss
+++ b/frontend/src/app/pointing/room-cards/room-cards.component.scss
@@ -82,12 +82,12 @@
 			}
 
 			complication-indicator {
-				padding: 1vh 1.5vh 1vh 0;
+				padding: 1.5vh 1.5vh 1vh 0;
 				grid-column: 1;
 				grid-row: 1;
 				opacity: 0.75;
 				width: 100%;
-				height: 100%;
+				display: flex;
 			}
 
 		}
